--- a/model_figma/style.css
+++ b/model_figma/style.css
@@ -91,7 +91,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     align-content: center;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap: 39px;
 
@@ -134,6 +134,7 @@ body {
     width: 140px;
     height: 50px;
     flex-shrink: 0;
+    border: none;
     border-radius: 50px;
     background: #F25822;
     box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.20);
@@ -178,3 +179,128 @@ body {
     width: 481px;
 }
 
+
+
+.content {
+
+}
+
+.top_block {
+    display:flex;
+    
+    padding-top: 140px;
+    padding-bottom: 100px;
+    
+}
+
+.top_img {
+    padding-bottom: 25px;
+}
+
+.top_text {
+    padding-top: 17px;
+}
+
+.text_link {
+    padding-top: 25px;
+}
+
+.bottom_block {
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(3, 370px);
+    justify-content: center;
+    padding-top: 54px;
+    padding-bottom: 100px;
+}
+
+.top_title {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.top_text {
+    color: #666;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 22.5px */
+    width: 310px;
+}
+
+.text_link {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 16.5px */
+}
+
+.center__header {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.center__text {
+    color: #666;
+    text-align: center;
+    font-family: Gilroy-Regular;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+    width: 682px;
+    padding-bottom: 54px;
+}
+
+.bottom_img {
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+    padding-bottom: 0px;
+}
+
+.bottom__title {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    
+}
+
+.bottom__text {
+    color: #AAA;
+    text-align: center;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 22.5px */
+    width: 310px;
+    padding-top: 22px;
+}
+
+.learn_more {
+    color: #FFF;
+    text-align: center;
+    font-family: Gilroy-Bold;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 19.5px */
+}
+
+.bottom_img {
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+
+}
