--- a/model_11_lesson/style.css
+++ b/model_11_lesson/style.css
@@ -15,8 +15,6 @@ body {
 .center {
     padding-left: calc(50% - 800px);
     padding-right: calc(50% - 800px);
-    /* width: 1600px;
-	margin:0 auto */
 }
 
 .header {
@@ -42,6 +40,10 @@ body {
 
 .header-menu-buttons {
     margin-left: 859px;    
+}
+
+.header-menu-buttons-mobile {
+    visibility: hidden;
 }
 
 .banner {
@@ -167,13 +169,43 @@ body {
     height: 420px;  
 }
 
-.bg-font-content {
+.bg-font-content-pink {
+    position: relative;
     display: grid;
     background-color: #F7E4E2;
-    height: 100%;
     width: 100%;
-    justify-items: center;  
+    height: 420px;
+    justify-items: center;
+    align-items: center;
 }
+
+.bg-font-dark {
+    position: absolute;
+    background-color: rgba(58, 56, 56, 0.86);
+    width: 100%;
+    height: 100%;
+}
+
+.buy_item {
+    display: flex;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0);
+    color: #FFF;
+    font-family: Lato;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border: 1px solid #FFF; 
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 12px;
+    padding-right: 12px;
+    justify-content: center;
+    align-items: center;
+    gap: 11px    
+}
+
 
 .card-item {
     background-color: #F8F8F8;;
@@ -182,7 +214,7 @@ body {
     padding: 24px 16px;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center-start;
     gap: 16px;
 }
 
@@ -308,3 +340,130 @@ body {
     gap: 16px;
 }
 }
+
+@media (max-width: 320px) {
+    .header {
+        width: 320px;
+    }
+
+    .header-logo {
+    margin-left: 16px;   
+    }
+
+    .header-menu-buttons {
+        display: none;    
+    }
+
+    .header-menu-buttons-mobile {
+        visibility: visible;
+        margin-left: 140px;  
+    }
+
+    .man_title {
+        display: none;
+    }
+
+    .header_item_title {
+        justify-content: center;
+        height: 363px;
+    }
+
+    .banner {
+        border-left: 12px solid #F16D7F;
+        padding-left: 8px;     
+    }
+    
+    .banner-title {
+        
+        font-size: 29px;
+           
+    }
+    
+    .banner-subtitle {
+        padding-left: 8px;
+        font-size: 15px;
+        font-weight: 700;
+    }
+
+    .fashion {
+        color: #F16D7F;
+        font-size: 15px;     
+    }
+
+    .category {
+        display: flex;   
+        gap: 32px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center; 
+    }
+
+    .catagory-women {   
+        width: 288px;
+        height: 247px
+    }
+    
+    .catagory-man {
+        width: 288px;
+        height: 247px
+    }
+    
+    .catagory-kid {
+        width: 288px;
+        height: 247px
+    }
+    
+    .catagory_accesories {
+        height: 111px;
+        width: 288px;       
+    }
+
+    .content-central {
+        text-align: center;
+        padding-top: 64px;
+        padding-bottom: 64px;
+    }
+    
+    .content_title {  
+        color: #222;
+        font-size: 30px;
+        font-weight: 400;
+    }
+    
+    .content_text {
+        padding-top: 3px ;
+        color: #9F9F9F;
+        font-size: 12px;
+        font-weight: 400; 
+    }
+
+    .content {
+        grid-template-columns: 304px;
+        gap: 30px;  
+    }
+
+   .img-content {
+        height: 359px;
+        width:  304px;
+   }
+
+   .img-content-pink {
+        height: 359px;
+   }
+
+   .content-item {
+        height: 510px;
+   }
+
+   .bg-font-content-pink {
+    
+    width: 100%;
+    height: 100%;
+}
+
+       
+}
+
+    
+    
+  
