--- a/model_11_lesson/style.css
+++ b/model_11_lesson/style.css
@@ -74,7 +74,7 @@ body {
 }
 
 .banner-subtitle {
-    padding-left: 16px;
+    padding-left: 1px;
     font-size: 32px;
     font-weight: 700;
 }
@@ -268,7 +268,7 @@ body {
     padding: 24px 16px;
     flex-direction: column;
     justify-content: center;
-    align-items: center-start;
+    
     gap: 16px;
 }
 
@@ -336,8 +336,6 @@ body {
     width: 360px
 }
 
-
-
 .adv-title {
     color: #FBFBFB;
     font-family: Lato;
@@ -360,6 +358,8 @@ body {
 }
 
 .footer-subscribe {
+    display: flex;
+
     position: relative;
     background-image: url(img/subscribe_font.png);
     height: 448px;
@@ -380,9 +380,12 @@ body {
 }
 
 .subscribe_1 {
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
+    left: 228px;
+    top:97px
 }
 
 .subscribe-text {
@@ -399,9 +402,12 @@ body {
 }
 
 .subscribe_2 {
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
+    left: 900px;
+    top:150px
 }
 
 .subscribe-header {
@@ -421,7 +427,9 @@ body {
 }
 
 .subscribe-input {
-    padding-top: 32px;
+    position: absolute;
+    left: 890px;
+    top: 243px;
     display: flex;
     gap: 0px;
 }
